err/freshen.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/freshen'...
Compiling './lib/python3.5/site-packages/freshen/compat.py'...
***   File "./lib/python3.5/site-packages/freshen/compat.py", line 26
    print relpath("/tmp/dir1/file", "/tmp")
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/freshen/cuke.py'...
***   File "./lib/python3.5/site-packages/freshen/cuke.py", line 75
    except AssertionError, e:
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/freshen/handlers.py'...
***   File "./lib/python3.5/site-packages/freshen/handlers.py", line 40
    print colored(" ".join(('@' + t) for t in feature.tags), TAG)
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/freshen/noseplugin.py'...
***   File "./lib/python3.5/site-packages/freshen/noseplugin.py", line 141
    except ParseException, e:
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/freshen/parser.py'...
***   File "./lib/python3.5/site-packages/freshen/parser.py", line 15
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/freshen-0.2.egg-info'...
Listing './lib/python3.5/site-packages/nose'...
Listing './lib/python3.5/site-packages/nose/ext'...
Listing './lib/python3.5/site-packages/nose/plugins'...
Listing './lib/python3.5/site-packages/nose/sphinx'...
Listing './lib/python3.5/site-packages/nose/tools'...
Listing './lib/python3.5/site-packages/nose-1.3.7.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyparsing-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './man'...
Listing './man/man1'...
Listing './share'...
Listing './share/python-wheels'...
